--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,7 @@ h1,h2,h3,h4,h5,h6,ul,li,p {
     text-decoration: none;
 }
 
-.services {
-    display: flex;
-}
+
 
 .what-we-do {
     padding-bottom: 94px;
@@ -206,7 +204,7 @@ display: flex;
 
 .button:hover,
 .button:active,
-.button:focus, {
+.button:focus {
     box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
 }
 
@@ -423,6 +421,34 @@ fill: currentColor;
 }
 
 /* What we do */
+ .services {
+display: flex;
+    
+}
+
+.services-items {
+position: relative;
+}
+
+
+.description-services {
+    bottom:0px;
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(to right, #2F303ACC, #2F303ACC);
+}
+
+.description-services p {
+    color: #FFFFFF;
+    line-height: 1.14;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+}
 
 .project {
 text-transform: none;
