--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,35 @@ h1,h2,h3,h4,h5,h6,ul,li,p {
     margin: 0 auto 45px auto;
 }
 
+
+.modal {
+position:absolute;
+width:528px;
+height:581px;
+top: 221px;
+left: 536px;
+background-color: #FFFFFF;
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+
+}
+
+.backdrop {
+position: fixed;
+width: 1600px;
+height: 1024px;
+left: 0px;
+top: 0px;
+background: rgba(0, 0, 0, 0.2);
+background-image: linear-gradient(to right, #00000033, #00000033);
+}
+
+
+.backdrop.is-hidden {
+ opacity: 0;
+pointer-events: none;
+
+}
 .team-list-name {
     text-transform: none;
     font-size: 16px;
@@ -113,6 +142,10 @@ h1,h2,h3,h4,h5,h6,ul,li,p {
 .contacts {
     font-size: 14px;
     line-height: 1.7;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-contacts.top {
@@ -148,6 +181,10 @@ display: flex;
     font-style: normal;
     font-size: 14px;
     line-height: 1.71;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .button {
@@ -161,6 +198,7 @@ display: flex;
     text-align: center;
     letter-spacing: 0.06em;
     border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     padding: 10px 32px;
     border-width: 0;
 }
@@ -192,6 +230,10 @@ display: flex;
     line-height: 1.62;
     letter-spacing: 0.03em;
     padding:6px 22px;
+
+    transition-property: background-color, color, box-shadow;
+    transition-duration:250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .menu .button:hover,
@@ -200,12 +242,7 @@ display: flex;
     background-color: var(--background-button-hover);
     color: var(--button-and-h1-color);
     box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
-}
 
-.button:hover,
-.button:active,
-.button:focus {
-    box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
 }
 
 .site-nav .link:hover, 
@@ -215,12 +252,34 @@ display: flex;
     color: var(--background-button-hover);
 }
 
-.site-nav a {
+.site-nav-item {
+ position:relative;
+}
+
+.current:after{
+    position: absolute;
+    top:46px;
+    left:0;
+    content:'';
+    display: block;
+    width:100%;
+    height:4px;
+    background: #2196F3;
+    border-radius: 2px;
+    
+}
+
+.site-nav .link {
     color: var(--small-text-color);
     font-weight: 500;
     letter-spacing: 0.02em;
     font-size: 14px;
     line-height: 1.14;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+
 }
 
 .site-nav li {
@@ -380,13 +439,16 @@ justify-content: center;
 }
 
 .social-media-link {
-   display:flex;
+    display:flex;
     width: 44px;
     height: 44px;
-   align-items: center;
-   justify-content: center;
+    align-items: center;
+    justify-content: center;
     color: var(--background-svg-color);
 
+    transition-property: background-color, color, border-radius;
+    transition-duration: 1250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .social-media-link:hover, 
@@ -428,6 +490,8 @@ display: flex;
 
 .services-items {
 position: relative;
+width:370px;
+height:294px;
 }
 
 
@@ -471,17 +535,46 @@ margin-bottom: 4px;
     display: flex;
     flex-wrap: wrap;
     margin-top: 50px;
+    
 }
+.portfolio-img {
+position: relative;
+overflow: hidden;
+}
+
+.portfolio-img:before {
+    display:block;
+    position: absolute;
+    content:'';
+    bottom:0px;
+    left:0px;
+    width:100%;
+    height:100%;
+    background-color: #2196F3E5;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-img:hover:before {
+transform: translateY(0);
+
+}
+
 
 .item:hover,
 .item:focus {
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+
 }
 
 .item {
  width:370px;
  margin-right: 30px;
  margin-bottom: 30px;
+
+ transition-property: box-shadow;
+ transition-duration: 250ms;
+ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .item img {
@@ -524,6 +617,10 @@ margin-right: 0;
     border: 1px solid var(--background-svg-color);
     border-radius: 4px;
     color: var(--background-svg-color);
+
+    transition-property: color, border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .regular-customers-link:hover,
@@ -566,6 +663,7 @@ display: flex;
     color: var(--button-and-h1-color);
     text-transform: uppercase;
     font-weight: 700;
+    font-size:14px;
 }
 
 .logo.bottom {
@@ -601,6 +699,10 @@ display: flex;
     align-items: center;
     justify-content: center;
     color: var(--button-and-h1-color);
+
+    transition-property: background-color, color, border-radius;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .social-media-link-bottom:hover,
