--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,6 @@ p {
     background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-
 }
 
 .button-close-svg {
@@ -129,6 +128,7 @@ p {
     transform: translateX(-50%);
     background: rgba(0, 0, 0, 0.2);
     background-image: linear-gradient(to right, #00000033, #00000033);
+    transition: opacity, isibility, 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
  .button-close {
@@ -143,14 +143,16 @@ p {
     color: inherit;
     background-color: transparent;
     cursor: pointer;
-
+  
 }
 
 .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
-
+    visibility: hidden;  
 }
+
+
 
 .team-list-name {
     text-transform: none;
@@ -263,11 +265,14 @@ p {
     line-height: 1.62;
     letter-spacing: 0.03em;
     padding: 6px 22px;
+    box-shadow:none;
 
     transition-property: background-color, color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
+
+
 
 .menu .button:hover,
 .menu .button:active,
@@ -300,6 +305,7 @@ p {
     border-radius: 2px;
 
 }
+
 
 .site-nav .link {
     color: var(--small-text-color);
